--- a/uptimer-server/package.json
+++ b/uptimer-server/package.json
@@ -12,10 +12,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@apollo/server": "^4.11.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "express-async-errors": "^3.1.1",
+    "graphql": "^16.9.0",
     "pino-pretty": "^11.2.2",
     "typescript": "^5.5.4",
     "typescript-transform-paths": "^3.4.10"
