--- a/uptimer-server/package.json
+++ b/uptimer-server/package.json
@@ -23,6 +23,7 @@
     "typescript-transform-paths": "^3.4.10"
   },
   "devDependencies": {
+    "@types/node": "^22.3.0",
     "prettier": "^3.3.3",
     "ts-node": "^10.9.2",
     "tsc-alias": "^1.8.10",
