--- a/uptimer-server/package.json
+++ b/uptimer-server/package.json
@@ -13,7 +13,10 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.11.0",
+    "@graphql-tools/merge": "^9.0.5",
+    "@graphql-tools/schema": "^10.0.5",
     "bcryptjs": "^2.4.3",
+    "cookie-session": "^2.1.0",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "express-async-errors": "^3.1.1",
@@ -23,6 +26,8 @@
     "typescript-transform-paths": "^3.4.10"
   },
   "devDependencies": {
+    "@types/cookie-session": "^2.0.49",
+    "@types/cors": "^2.8.17",
     "@types/node": "^22.3.0",
     "prettier": "^3.3.3",
     "ts-node": "^10.9.2",
