--- a/uptimer-server/package.json
+++ b/uptimer-server/package.json
@@ -26,6 +26,7 @@
     "typescript-transform-paths": "^3.4.10"
   },
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/cookie-session": "^2.0.49",
     "@types/cors": "^2.8.17",
     "@types/node": "^22.3.0",
