--- a/uptimer-server/package.json
+++ b/uptimer-server/package.json
@@ -21,6 +21,7 @@
     "express": "^4.19.2",
     "express-async-errors": "^3.1.1",
     "graphql": "^16.9.0",
+    "pino": "^9.3.2",
     "pino-pretty": "^11.2.2",
     "typescript": "^5.5.4",
     "typescript-transform-paths": "^3.4.10"
