--- a/uptimer-server/package.json
+++ b/uptimer-server/package.json
@@ -23,6 +23,7 @@
     "graphql": "^16.9.0",
     "pino": "^9.3.2",
     "pino-pretty": "^11.2.2",
+    "sequelize": "^6.37.3",
     "typescript": "^5.5.4",
     "typescript-transform-paths": "^3.4.10"
   },
