--- a/uptimer-server/package.json
+++ b/uptimer-server/package.json
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/cookie-session": "^2.0.49",
     "@types/cors": "^2.8.17",
     "@types/node": "^22.3.0",
