--- a/uptimer-server/package.json
+++ b/uptimer-server/package.json
@@ -21,6 +21,7 @@
     "express": "^4.19.2",
     "express-async-errors": "^3.1.1",
     "graphql": "^16.9.0",
+    "lodash": "^4.17.21",
     "pino": "^9.3.2",
     "pino-pretty": "^11.2.2",
     "sequelize": "^6.37.3",
@@ -32,6 +33,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/cookie-session": "^2.0.49",
     "@types/cors": "^2.8.17",
+    "@types/lodash": "^4.17.7",
     "@types/node": "^22.3.0",
     "prettier": "^3.3.3",
     "ts-node": "^10.9.2",
