--- a/uptimer-server/package.json
+++ b/uptimer-server/package.json
@@ -23,11 +23,13 @@
     "graphql": "^16.9.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
+    "pg": "^8.12.0",
     "pino": "^9.3.2",
     "pino-pretty": "^11.2.2",
     "sequelize": "^6.37.3",
     "typescript": "^5.5.4",
-    "typescript-transform-paths": "^3.4.10"
+    "typescript-transform-paths": "^3.4.10",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
