--- a/uptimer-server/package.json
+++ b/uptimer-server/package.json
@@ -18,6 +18,7 @@
     "bcryptjs": "^2.4.3",
     "cookie-session": "^2.1.0",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.12",
     "express": "^4.19.2",
     "express-async-errors": "^3.1.1",
     "graphql": "^16.9.0",
