--- a/uptimer-server/package.json
+++ b/uptimer-server/package.json
@@ -23,6 +23,8 @@
     "express": "^4.19.2",
     "express-async-errors": "^3.1.1",
     "graphql": "^16.9.0",
+    "graphql-subscriptions": "^2.0.0",
+    "graphql-ws": "^5.16.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "pg": "^8.12.0",
@@ -31,6 +33,7 @@
     "sequelize": "^6.37.3",
     "typescript": "^5.5.4",
     "typescript-transform-paths": "^3.4.10",
+    "ws": "^8.18.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
@@ -41,6 +44,7 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/lodash": "^4.17.7",
     "@types/node": "^22.3.0",
+    "@types/ws": "^8.5.12",
     "prettier": "^3.3.3",
     "ts-node": "^10.9.2",
     "tsc-alias": "^1.8.10",
