--- a/uptimer-server/package.json
+++ b/uptimer-server/package.json
@@ -15,6 +15,7 @@
     "@apollo/server": "^4.11.0",
     "@graphql-tools/merge": "^9.0.5",
     "@graphql-tools/schema": "^10.0.5",
+    "axios": "^1.7.4",
     "bcryptjs": "^2.4.3",
     "cookie-session": "^2.1.0",
     "cors": "^2.8.5",
