--- a/uptimer-server/package.json
+++ b/uptimer-server/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "pm2 start ./build/src/index.js -i 5 --attach --watch | pino-pretty -c",
+    "start": "node ./build/src/index.js | pino-pretty -c",
     "dev": "nodemon -r tsconfig-paths/register src/index.ts | pino-pretty -c",
-    "build": "tsc --project tsconfig.json && tsc-alias -p tsconfig.json"
+    "build": "tsc --project tsconfig.json && tsc-alias -p tsconfig.json  && ts-node tools/copyAssets.ts"
   },
   "keywords": [],
   "author": "",
@@ -21,14 +21,18 @@
     "cors": "^2.8.5",
     "croner": "^8.1.1",
     "dayjs": "^1.11.12",
+    "ejs": "^3.1.10",
+    "email-templates": "^12.0.1",
     "express": "^4.19.2",
     "express-async-errors": "^3.1.1",
+    "fs-extra": "^11.2.0",
     "graphql": "^16.9.0",
     "graphql-subscriptions": "^2.0.0",
     "graphql-ws": "^5.16.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongodb": "^6.8.0",
+    "nodemailer": "^6.9.14",
     "pg": "^8.12.0",
     "pino": "^9.3.2",
     "pino-pretty": "^11.2.2",
@@ -44,9 +48,12 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/cookie-session": "^2.0.49",
     "@types/cors": "^2.8.17",
+    "@types/email-templates": "^10.0.4",
+    "@types/fs-extra": "^11.0.4",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/lodash": "^4.17.7",
     "@types/node": "^22.3.0",
+    "@types/nodemailer": "^6.4.15",
     "@types/ws": "^8.5.12",
     "prettier": "^3.3.3",
     "ts-node": "^10.9.2",
