--- a/uptimer-client/package.json
+++ b/uptimer-client/package.json
@@ -7,7 +7,23 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "lint:fix": "next lint --fix"
+    "lint:fix": "next lint --fix",
+    "prepare": "cd .. && husky install uptimer-client/.husky",
+    "pre-commit": "lint-staged"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "**/*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "**/*.{css,scss,md,html,json}": [
+      "prettier --write"
+    ]
   },
   "dependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
@@ -15,6 +31,7 @@
     "@typescript-eslint/parser": "^8.2.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
+    "lint-staged": "^15.2.9",
     "next": "14.2.6",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.6",
@@ -27,6 +44,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.6",
+    "husky": "^9.1.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
