feat: install graphql apollo client package

--- a/uptimer-client/package.json
+++ b/uptimer-client/package.json
@@ -26,12 +26,14 @@
     ]
   },
   "dependencies": {
+    "@apollo/client": "^3.11.4",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@typescript-eslint/eslint-plugin": "^8.2.0",
     "@typescript-eslint/parser": "^8.2.0",
     "clsx": "^2.1.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
+    "graphql": "^16.9.0",
     "lint-staged": "^15.2.9",
     "next": "14.2.6",
     "prettier": "^3.3.3",
