--- a/uptimer-client/package.json
+++ b/uptimer-client/package.json
@@ -34,6 +34,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "graphql": "^16.9.0",
+    "graphql-ws": "^5.16.0",
     "lint-staged": "^15.2.9",
     "next": "14.2.6",
     "prettier": "^3.3.3",
