feat: install apollo cache persist

--- a/uptimer-client/package.json
+++ b/uptimer-client/package.json
@@ -30,6 +30,7 @@
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@typescript-eslint/eslint-plugin": "^8.2.0",
     "@typescript-eslint/parser": "^8.2.0",
+    "apollo3-cache-persist": "^0.15.0",
     "clsx": "^2.1.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
