--- a/uptimer-server/package.json
+++ b/uptimer-server/package.json
@@ -21,6 +21,7 @@
     "cors": "^2.8.5",
     "croner": "^8.1.1",
     "dayjs": "^1.11.12",
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "email-templates": "^12.0.1",
     "express": "^4.19.2",
