--- a/uptimer-client/package.json
+++ b/uptimer-client/package.json
@@ -32,6 +32,7 @@
     "@typescript-eslint/parser": "^8.2.0",
     "apollo3-cache-persist": "^0.15.0",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "firebase": "^10.13.0",
