--- a/uptimer-client/package.json
+++ b/uptimer-client/package.json
@@ -31,6 +31,7 @@
     "@typescript-eslint/eslint-plugin": "^8.2.0",
     "@typescript-eslint/parser": "^8.2.0",
     "apollo3-cache-persist": "^0.15.0",
+    "chart.js": "^4.4.4",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "eslint-config-prettier": "^9.1.0",
@@ -43,6 +44,7 @@
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.6",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-toastify": "^10.0.5",
