--- a/uptimer-client/.env.example
+++ b/uptimer-client/.env.example
@@ -5,3 +5,5 @@ NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=
 NEXT_PUBLIC_FIREBASE_APP_ID=
 NEXT_PUBLIC_NODE_ENV=
+NEXT_PUBLIC_HTTP_SERVER_URL=
+NEXT_PUBLIC_WS_SERVER_URL=
