--- a/uptimer-client/package.json
+++ b/uptimer-client/package.json
@@ -48,6 +48,7 @@
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-toastify": "^10.0.5",
+    "sharp": "^0.33.5",
     "zod": "^3.23.8"
   },
   "devDependencies": {
